Fix positioning of boards on mobile devices

--- a/src/features/Battleship/components/Boards/styles/Boards.module.css
+++ b/src/features/Battleship/components/Boards/styles/Boards.module.css
@@ -8,3 +8,19 @@
     background-color: gray;
   }
 }
+
+.Boards {
+  display: flex;
+  flex-direction: row;
+  align-items: "center";
+  justify-content: "center",
+}
+
+@media (max-width: 700px) {
+  .Boards {
+    display: flex;
+    flex-direction: column;
+    align-items: "center";
+    justify-content: "center",
+  }
+}
